src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>C501_Days_Until_Class__c</fullName>
        <formula>Training_Start_DateTime__c - NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Class</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_Training_Location_Text__c</fullName>
        <formula>Campaign.C501_Training_Location_Text__c</formula>
        <label>Training Location Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meal_Provided__c</fullName>
        <formula>IF( Campaign.Meal_Provided__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meal Provided</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Training_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Training Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Training_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Training Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_End_DateTime__c</fullName>
        <formula>Campaign.custom_End_DateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Training_Full_Name__c</fullName>
        <formula>Campaign.Training_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Incentive__c</fullName>
        <formula>TEXT( Campaign.Training_Incentive__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Incentive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Internal_Id__c</fullName>
        <formula>Campaign.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Internal Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Location_Other__c</fullName>
        <formula>Campaign.Location_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Location Other</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Location__c</fullName>
        <formula>TEXT(Campaign.Location__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Name__c</fullName>
        <formula>Campaign.Training_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Start_DateTime__c</fullName>
        <formula>Campaign.custom_Start_DateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Training_Status__c</fullName>
        <defaultValue>&quot;Registered&quot;</defaultValue>
        <label>Training Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Training_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>custom_Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether member attended the training</inlineHelpText>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>custom_Campaign_Member_Number__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Member Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>custom_Member_ID__c</fullName>
        <externalId>true</externalId>
        <label>Member ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>